--- a/blog/templates/blog/tag_detail.html
+++ b/blog/templates/blog/tag_detail.html
@@ -1,12 +1,14 @@
 {% extends 'blog/base.html' %}
 
 {% block title %}
-    INDEX PAGE
+    {{ tag.title }} - {{ block.super }}
 {% endblock %}
 
 {% block content %}
+    <h1>Post with "{{ tag.title|title }}" tag:</h1>
+
     <ul>
-        {% for post in posts %}
+        {% for post in tag.posts.all %}
             {% include 'blog/includes/post_card_template.html' %}
         {% endfor %}
     </ul>
