--- a/blog/templates/blog/includes/post_card_template.html
+++ b/blog/templates/blog/includes/post_card_template.html
@@ -10,7 +10,7 @@
             <ul>
                 {% for tag in tags %}
                     <li>
-                        <a href="{{ tag.get_absolute_url }}">{{ post.title }}</a>
+                        <a href="{{ tag.get_absolute_url }}">{{ tag.title }}</a>
                     </li>
                 {% endfor %}
             </ul>
