--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,7 +1,7 @@
 {% extends 'blog/base.html' %}
 
 {% block title %}
-    INDEX PAGE
+    INDEX PAGE - {{ block.super }}
 {% endblock %}
 
 {% block content %}
