--- a/templates/base.html
+++ b/templates/base.html
@@ -1,8 +1,9 @@
+{#{% load static %}#}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}Empty...{% endblock %}</title>
+    <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
     {% block content %}
